<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/teal_200"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/which_country_s_flag_is_this"
        android:textAlignment="center"
        android:textColor="#5615B3"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/iv_flag"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/indonesian_flag"
        app:srcCompat="@drawable/indonesian_flag" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        >

        <ProgressBar
            android:id="@+id/pb_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:indeterminate="false"
            android:max="9"
            android:minHeight="50dp"
            android:progress="1"
            android:progressTint="@color/white" />

        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#881D1D"
            android:padding="15dp"
            android:textSize="14sp"
            tools:text="0/9" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_ans_a"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:text="@string/poland"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_ans_b"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:text="@string/russia"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_ans_c"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:gravity="bottom|center_horizontal"
            android:text="@string/indonesia"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_ans_d"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:text="@string/argentina"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_submit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:backgroundTint="@color/purple_500"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>